<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    tools:context=".RegisterActivity"
    android:id="@+id/registration">


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"


        android:layout_marginEnd="-1dp"

        android:background="#FCFDCB00"
        android:padding="10dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordAgainEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"

        />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textMultiLine"
        android:maxLines="3" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:onClick="register"
            android:text="@string/registration"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/rounded_rectangle"
            android:textAllCaps="true"
            android:textColor="#045C59"
            android:textSize="14sp"

            />

        <Button


            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/rounded_rectangle"
            android:textAllCaps="true"
            android:textColor="#045C59"
            android:textSize="15sp"
             />

    </LinearLayout>
</RelativeLayout>